--- a/requirements.txt
+++ b/requirements.txt
@@ -4,115 +4,103 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-ansible==2.6.18
+ansible==2.9.25
     # via -r requirements.in
-asn1crypto==0.24.0
-    # via cryptography
-awacs==0.8.2
+attrs==21.2.0
+    # via jsonschema
+awacs==2.0.1
     # via -r requirements.in
-awscli==1.16.96
+awscli==1.20.36
     # via -r requirements.in
 bcdoc==0.16.0
     # via -r requirements.in
-bcrypt==3.1.6
-    # via paramiko
-boto3==1.9.86
+boto3==1.18.36
     # via -r requirements.in
-botocore==1.12.86
+botocore==1.21.36
     # via
     #   awscli
     #   boto3
     #   s3transfer
-certifi==2018.11.29
+certifi==2021.5.30
     # via requests
-cffi==1.11.5
-    # via
-    #   bcrypt
-    #   cryptography
-    #   pynacl
-chardet==3.0.4
+cffi==1.14.6
+    # via cryptography
+charset-normalizer==2.0.4
     # via requests
-colorama==0.3.9
+colorama==0.4.3
     # via awscli
-cryptography==2.5
+cryptography==3.4.8
     # via
+    #   -r requirements.in
     #   ansible
-    #   paramiko
-docutils==0.14
+docutils==0.15.2
     # via
     #   awscli
     #   bcdoc
-    #   botocore
-idna==2.8
+idna==3.2
     # via requests
-jinja2==2.10
+jinja2==3.0.1
     # via
     #   ansible
     #   jinja2-cli
-jinja2-cli[yaml]==0.6.0
+jinja2-cli[yaml]==0.7.0
     # via -r requirements.in
-jmespath==0.9.3
+jmespath==0.10.0
     # via
     #   boto3
     #   botocore
-jsonschema==2.6.0
+jsonschema==3.2.0
     # via -r requirements.in
-markupsafe==1.1.0
+markupsafe==2.0.1
     # via jinja2
-mitogen==0.2.3
+mitogen==0.2.9
     # via -r requirements.in
-netaddr==0.7.19
+netaddr==0.8.0
     # via -r requirements.in
-paramiko==2.4.2
-    # via ansible
-pbr==5.1.1
+pbr==5.6.0
     # via -r requirements.in
 pretty==0.1
     # via -r requirements.in
-pyaml==18.11.0
+pyaml==21.8.3
     # via -r requirements.in
-pyasn1==0.4.5
-    # via
-    #   paramiko
-    #   rsa
-pycparser==2.19
+pyasn1==0.4.8
+    # via rsa
+pycparser==2.20
     # via cffi
-pynacl==1.3.0
-    # via paramiko
-python-dateutil==2.7.5
+pyrsistent==0.18.0
+    # via jsonschema
+python-dateutil==2.8.2
     # via botocore
-python-slugify==2.0.1
+python-slugify==5.0.2
     # via -r requirements.in
-pyyaml==3.13
+pyyaml==5.4.1
     # via
     #   -r requirements.in
     #   ansible
     #   awscli
     #   jinja2-cli
     #   pyaml
-requests==2.21.0
+requests==2.26.0
     # via -r requirements.in
-rsa==3.4.2
+rsa==4.7.2
     # via awscli
-s3transfer==0.1.13
+s3transfer==0.5.0
     # via
     #   awscli
     #   boto3
-simplejson==3.16.0
+simplejson==3.17.5
     # via -r requirements.in
-six==1.12.0
+six==1.16.0
     # via
     #   -r requirements.in
     #   bcdoc
-    #   bcrypt
-    #   cryptography
-    #   pynacl
+    #   jsonschema
     #   python-dateutil
-subprocess32==3.5.3
+subprocess32==3.5.4
     # via -r requirements.in
-unidecode==1.0.23
+text-unidecode==1.3
     # via python-slugify
-urllib3==1.24.1
+urllib3==1.26.6
     # via
     #   botocore
     #   requests
