--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,11 +5,11 @@ inventory      = inventory.ini
 nocows=True
 retry_files_enabled = False
 # stdout_callback = debug
-callback_whitelist = actionable, profile_tasks, profile_roles, skippy, debug, unixy, actionable, custom
+callback_whitelist = profile_tasks, profile_roles, skippy, debug, unixy, custom
 stdout_callback = debug
 library = ./library
 
-# NOTE: Enabling pipelining reduces the number of SSH operations required to execute a module on the remote server, by executing many ansible modules without actual file transfer. This can result in a very significant performance improvement when enabled, however when using “sudo:” operations you must first disable ‘requiretty’ in /etc/sudoers on all managed hosts.
+# NOTE: Enabling pipelining reduces the number of SSH operations required to execute a module on the remote server, by executing many ansible modules without actual file transfer. This can result in a very significant performance improvement when enabled, however when using "sudo:" operations you must first disable 'requiretty' in /etc/sudoers on all managed hosts.
 pipelining = True
 
 become = True
@@ -45,7 +45,7 @@ strategy_plugins = /Users/malcolm/.pyenv/versions/bosslab-playbooks2/lib/python2
 # strategy = mitogen_linear
 
 [ssh_connection]
-# NOTE: Occasionally users may be managing a remote system that doesn’t have SFTP enabled. If set to True, we can cause scp to be used to transfer remote files instead here's really no reason to change this unless problems are encountered, and then there’s also no real drawback to managing the switch. Most environments support SFTP by default and this doesn’t usually need to be changed.
+# NOTE: Occasionally users may be managing a remote system that doesn't have SFTP enabled. If set to True, we can cause scp to be used to transfer remote files instead here's really no reason to change this unless problems are encountered, and then there's also no real drawback to managing the switch. Most environments support SFTP by default and this doesn't usually need to be changed.
 scp_if_ssh = False
 
 # ssh_args = -o ForwardAgent=yes
