--- a/playbooks/vagrant_nfs.yml
+++ b/playbooks/vagrant_nfs.yml
@@ -9,8 +9,8 @@
   become_method: sudo
   environment:
     DEBIAN_FRONTEND: noninteractive
-    bossjones__user: vagrant
-    bossjones__group: vagrant
+    bossjones__user: pi
+    bossjones__group: pi
     timezone: 'America/New_York'
   vars:
     boss__ntp__timezone: 'America/New_York'
@@ -25,7 +25,7 @@
       boss__nfs__nfs_server_group: nfs_masters
       boss__nfs__nfs_client_group: nfs_clients
       task: master
-      boss__nfs__nfs_interface: 'enp0s8'
+      boss__nfs__nfs_interface: 'ens33'
       boss__nfs__master_node_ip: "{{ hostvars[groups[boss__nfs__nfs_server_group][0]]['ansible_' + boss__nfs__nfs_interface].ipv4.address }}"
       tags:
         - boss-ansible-role-nfs
@@ -38,8 +38,8 @@
   become_method: sudo
   environment:
     DEBIAN_FRONTEND: noninteractive
-    bossjones__user: vagrant
-    bossjones__group: vagrant
+    bossjones__user: pi
+    bossjones__group: pi
     timezone: 'America/New_York'
   vars:
     boss__ntp__timezone: 'America/New_York'
@@ -54,7 +54,7 @@
       boss__nfs__nfs_server_group: nfs_masters
       boss__nfs__nfs_client_group: nfs_clients
       task: client
-      boss__nfs__nfs_interface: 'enp0s8'
+      boss__nfs__nfs_interface: 'ens33'
       boss__nfs__master_node_ip: "{{ hostvars[groups[boss__nfs__nfs_server_group][0]]['ansible_' + boss__nfs__nfs_interface].ipv4.address }}"
       # boss__nfs__nfs_interface: 'enp0s3'
       tags:
