--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -6,7 +6,7 @@ dist_dir_path: "{{base_dir_path}}/dist"
 manifest_dir_name: manifests/kubernetes-cluster-manifests
 manifest_dir_path: "{{dist_dir_path}}/{{manifest_dir_name}}"
 path_to_network_disk: "/mnt/publicdata"
-main_network_interface: 'enp0s8'
+main_network_interface: 'ens33'
 nfs_server_group: nfs_masters
 nfs_client_group: nfs_clients
 nfs_server_ip_override: 192.168.205.12
