getting closer to getting everything working again

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,6 +8,8 @@ retry_files_enabled = False
 callback_whitelist = profile_tasks, profile_roles, skippy, debug, unixy
 stdout_callback = debug
 library = ./library
+interpreter_python = auto
+
 
 # NOTE: Enabling pipelining reduces the number of SSH operations required to execute a module on the remote server, by executing many ansible modules without actual file transfer. This can result in a very significant performance improvement when enabled, however when using "sudo:" operations you must first disable 'requiretty' in /etc/sudoers on all managed hosts.
 pipelining = True
