--- a/contrib/inventory_builder/inventory/kubernetes-cluster/inventory.ini
+++ b/contrib/inventory_builder/inventory/kubernetes-cluster/inventory.ini
@@ -55,12 +55,12 @@ k8s-node-1
 [influxdb:children]
 k8s-node-1
 
-[graphite-master1:children]
+[graphite_master1:children]
 k8s-node-1
 
 # groups of groups = children
-[graphite-master-servers:children]
-graphite-master1
+[graphite_master_servers:children]
+graphite_master1
 
 [netdata_registry:children]
 masters
@@ -70,4 +70,4 @@ k8s-node-1
 k8s-node-2
 
 [graphite_master:children]
-graphite-master1
+graphite_master1
