--- a/contrib/inventory_builder/inventory/vmware_lab/inventory.ini
+++ b/contrib/inventory_builder/inventory/vmware_lab/inventory.ini
@@ -84,12 +84,12 @@ lab2
 [influxdb:children]
 lab2
 
-[graphite-master1:children]
+[graphite_master1:children]
 lab2
 
 # groups of groups = children
-[graphite-master-servers:children]
-graphite-master1
+[graphite_master_servers:children]
+graphite_master1
 
 [netdata_registry:children]
 masters
@@ -99,7 +99,7 @@ lab2
 lab3
 
 [graphite_master:children]
-graphite-master1
+graphite_master1
 
 
 
@@ -136,12 +136,12 @@ graphite-master1
 # [influxdb:children]
 # lab1
 #
-# [graphite-master1:children]
+# [graphite_master1:children]
 # lab1
 #
 # # groups of groups = children
-# [graphite-master-servers:children]
-# graphite-master1
+# [graphite_master_servers:children]
+# graphite_master1
 #
 # [netdata_registry:children]
 # masters
