--- a/contrib/inventory_builder/inventory/borg/inventory.ini
+++ b/contrib/inventory_builder/inventory/borg/inventory.ini
@@ -54,12 +54,12 @@ borg-worker-01
 [influxdb:children]
 borg-worker-01
 
-[graphite-master1:children]
+[graphite_master1:children]
 borg-worker-01
 
 # groups of groups = children
-[graphite-master-servers:children]
-graphite-master1
+[graphite_master_servers:children]
+graphite_master1
 
 [netdata_registry:children]
 masters
@@ -69,4 +69,4 @@ borg-worker-01
 borg-worker-02
 
 [graphite_master:children]
-graphite-master1
+graphite_master1
