--- a/contrib/inventory_builder/inventory/scarlett-k8/inventory.ini
+++ b/contrib/inventory_builder/inventory/scarlett-k8/inventory.ini
@@ -69,12 +69,12 @@ scarlett-k8-node-04
 [influxdb:children]
 scarlett-k8-node-01
 
-[graphite-master1:children]
+[graphite_master1:children]
 scarlett-k8-node-01
 
 # groups of groups = children
-[graphite-master-servers:children]
-graphite-master1
+[graphite_master_servers:children]
+graphite_master1
 
 [netdata_registry:children]
 masters
@@ -86,4 +86,4 @@ scarlett-k8-node-03
 scarlett-k8-node-04
 
 [graphite_master:children]
-graphite-master1
+graphite_master1
