--- a/inventory.ini
+++ b/inventory.ini
@@ -59,18 +59,18 @@ bosslab-worker-01
 bosslab-proxy-01
 
 # NOTE: Normally we'll split this off to a dedicated server somewhere, but for the purpose of vagrant, we'll have one of the servers run 2 different "roles"
-# [graphite-master1]
-# graphite-master1
+# [graphite_master1]
+# graphite_master1
 
 [influxdb:children]
 bosslab-worker-01
 
-[graphite-master1:children]
+[graphite_master1:children]
 bosslab-worker-01
 
 # groups of groups = children
-[graphite-master-servers:children]
-graphite-master1
+[graphite_master_servers:children]
+graphite_master1
 
 [netdata_registry:children]
 masters
@@ -81,7 +81,7 @@ bosslab-worker-02
 bosslab-proxy-01
 
 [graphite_master:children]
-graphite-master1
+graphite_master1
 
 # [kubernetes-master:vars]
 # boss__kubernetes__kubeadm__server_type=master
