--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,38 +4,40 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in
 #
-astroid==2.7.3
+astroid==2.9.3
     # via pylint
-attrs==21.2.0
+attrs==21.4.0
     # via
     #   -c requirements.txt
     #   pytest
-autopep8==1.5.7
+autopep8==1.6.0
     # via -r requirements-dev.in
-awscli==1.20.36
+awscli==1.22.77
     # via
     #   -c requirements.txt
     #   -r requirements-dev.in
+better-exceptions==0.3.3
+    # via -r requirements-dev.in
 blessings==1.7
     # via curtsies
-botocore==1.21.36
+botocore==1.24.22
     # via
     #   -c requirements.txt
     #   awscli
     #   s3transfer
-bpython==0.21
+bpython==0.22.1
     # via -r requirements-dev.in
 bump2version==1.0.1
     # via bumpversion
-bumplus==0.3.2
+bumplus==0.9.0
     # via -r requirements-dev.in
 bumpversion==0.6.0
     # via -r requirements-dev.in
-certifi==2021.5.30
+certifi==2021.10.8
     # via
     #   -c requirements.txt
     #   requests
-charset-normalizer==2.0.4
+charset-normalizer==2.0.12
     # via
     #   -c requirements.txt
     #   requests
@@ -43,65 +45,63 @@ colorama==0.4.3
     # via
     #   -c requirements.txt
     #   awscli
-curtsies==0.3.5
+curtsies==0.3.10
     # via bpython
-cwcwidth==0.1.4
+cwcwidth==0.1.6
     # via
     #   bpython
     #   curtsies
-docker-py==1.10.6
-    # via -r requirements-dev.in
-docker-pycreds==0.4.0
-    # via docker-py
 docutils==0.15.2
     # via
     #   -c requirements.txt
     #   awscli
 fancycompleter==0.9.1
     # via pdbpp
-greenlet==1.1.1
+greenlet==1.1.2
     # via bpython
-idna==3.2
+idna==3.3
     # via
     #   -c requirements.txt
     #   requests
 iniconfig==1.1.1
     # via pytest
-isort==5.9.3
+isort==5.10.1
     # via
     #   -r requirements-dev.in
     #   pylint
-jinja2==3.0.1
+jinja2==3.0.3
     # via
     #   -c requirements.txt
     #   bumplus
-jmespath==0.10.0
+jmespath==1.0.0
     # via
     #   -c requirements.txt
     #   botocore
-lazy-object-proxy==1.6.0
+lazy-object-proxy==1.7.1
     # via astroid
-markupsafe==2.0.1
+markupsafe==2.1.1
     # via
     #   -c requirements.txt
     #   jinja2
 mccabe==0.6.1
     # via pylint
-packaging==21.0
-    # via pytest
+packaging==21.3
+    # via
+    #   -c requirements.txt
+    #   pytest
 pathspec==0.9.0
     # via yamllint
 pdbpp==0.10.3
     # via -r requirements-dev.in
 pep8==1.7.1
     # via -r requirements-dev.in
-platformdirs==2.3.0
+platformdirs==2.5.1
     # via pylint
 pluggy==1.0.0
     # via pytest
-py==1.10.0
+py==1.11.0
     # via pytest
-pyaml==21.8.3
+pyaml==21.10.1
     # via
     #   -c requirements.txt
     #   -r requirements-dev.in
@@ -109,21 +109,23 @@ pyasn1==0.4.8
     # via
     #   -c requirements.txt
     #   rsa
-pycodestyle==2.7.0
+pycodestyle==2.8.0
     # via autopep8
-pygments==2.10.0
+pygments==2.11.2
     # via
     #   bpython
     #   pdbpp
-pylint==2.10.2
+pylint==2.12.2
     # via -r requirements-dev.in
-pyparsing==2.4.7
-    # via packaging
+pyparsing==3.0.7
+    # via
+    #   -c requirements.txt
+    #   packaging
 pyrepl==0.9.0
     # via fancycompleter
-pytest==6.2.5
+pytest==7.1.1
     # via pytest-testinfra
-pytest-testinfra==6.4.0
+pytest-testinfra==6.6.0
     # via -r requirements-dev.in
 python-dateutil==2.8.2
     # via
@@ -140,16 +142,15 @@ pyyaml==5.4.1
     #   awscli
     #   pyaml
     #   yamllint
-requests==2.26.0
+requests==2.27.1
     # via
     #   -c requirements.txt
     #   bpython
-    #   docker-py
 rsa==4.7.2
     # via
     #   -c requirements.txt
     #   awscli
-s3transfer==0.5.0
+s3transfer==0.5.2
     # via
     #   -c requirements.txt
     #   awscli
@@ -157,24 +158,26 @@ six==1.16.0
     # via
     #   -c requirements.txt
     #   blessings
-    #   docker-py
-    #   docker-pycreds
     #   python-dateutil
 toml==0.10.2
     # via
     #   autopep8
     #   pylint
-    #   pytest
-urllib3==1.26.6
+tomli==2.0.1
+    # via pytest
+typing-extensions==4.1.1
+    # via
+    #   astroid
+    #   bpython
+    #   pylint
+urllib3==1.26.9
     # via
     #   -c requirements.txt
     #   botocore
     #   requests
-websocket-client==1.2.1
-    # via docker-py
 wmctrl==0.4
     # via pdbpp
-wrapt==1.12.1
+wrapt==1.13.3
     # via astroid
 yamllint==1.26.3
     # via -r requirements-dev.in
