--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -4,34 +4,139 @@
 #
 #    pip-compile --output-file=requirements-test.txt requirements-test.in
 #
-certifi==2021.5.30
+ansible-compat==2.0.2
+    # via
+    #   molecule
+    #   molecule-docker
+arrow==1.2.2
+    # via jinja2-time
+bcrypt==3.2.0
+    # via paramiko
+binaryornot==0.4.4
+    # via cookiecutter
+cerberus==1.3.2
+    # via molecule
+certifi==2021.10.8
     # via
     #   -c requirements.txt
     #   requests
-charset-normalizer==2.0.4
+cffi==1.15.0
+    # via
+    #   -c requirements.txt
+    #   bcrypt
+    #   cryptography
+    #   pynacl
+chardet==4.0.0
+    # via binaryornot
+charset-normalizer==2.0.12
     # via
     #   -c requirements.txt
     #   requests
-docker-py==1.10.6
-    # via -r requirements-test.in
-docker-pycreds==0.4.0
-    # via docker-py
-idna==3.2
+click==8.0.4
+    # via
+    #   click-help-colors
+    #   cookiecutter
+    #   molecule
+click-help-colors==0.9.1
+    # via molecule
+commonmark==0.9.1
+    # via rich
+cookiecutter==1.7.3
+    # via molecule
+cryptography==36.0.2
+    # via
+    #   -c requirements.txt
+    #   paramiko
+docker==5.0.3
+    # via molecule-docker
+enrich==1.2.7
+    # via molecule
+idna==3.3
     # via
     #   -c requirements.txt
     #   requests
-requests==2.26.0
+jinja2==3.0.3
     # via
     #   -c requirements.txt
-    #   docker-py
+    #   cookiecutter
+    #   jinja2-time
+    #   molecule
+jinja2-time==0.2.0
+    # via cookiecutter
+markupsafe==2.1.1
+    # via
+    #   -c requirements.txt
+    #   jinja2
+molecule[docker]==3.6.1
+    # via
+    #   -r requirements-test.in
+    #   molecule-docker
+molecule-docker==1.1.0
+    # via molecule
+packaging==21.3
+    # via
+    #   -c requirements.txt
+    #   molecule
+paramiko==2.10.3
+    # via molecule
+pluggy==1.0.0
+    # via molecule
+poyo==0.5.0
+    # via cookiecutter
+pycparser==2.21
+    # via
+    #   -c requirements.txt
+    #   cffi
+pygments==2.11.2
+    # via rich
+pynacl==1.5.0
+    # via paramiko
+pyparsing==3.0.7
+    # via
+    #   -c requirements.txt
+    #   packaging
+python-dateutil==2.8.2
+    # via
+    #   -c requirements.txt
+    #   arrow
+python-slugify==6.1.1
+    # via
+    #   -c requirements.txt
+    #   cookiecutter
+pyyaml==5.4.1
+    # via
+    #   -c requirements.txt
+    #   ansible-compat
+    #   molecule
+requests==2.27.1
+    # via
+    #   -c requirements.txt
+    #   cookiecutter
+    #   docker
+    #   molecule-docker
+rich==12.0.0
+    # via
+    #   enrich
+    #   molecule
 six==1.16.0
     # via
     #   -c requirements.txt
-    #   docker-py
-    #   docker-pycreds
-urllib3==1.26.6
+    #   bcrypt
+    #   cookiecutter
+    #   paramiko
+    #   python-dateutil
+subprocess-tee==0.3.5
+    # via ansible-compat
+text-unidecode==1.3
+    # via
+    #   -c requirements.txt
+    #   python-slugify
+urllib3==1.26.9
     # via
     #   -c requirements.txt
     #   requests
-websocket-client==1.2.1
-    # via docker-py
+websocket-client==1.3.1
+    # via docker
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
