--- a/requirements.txt
+++ b/requirements.txt
@@ -4,106 +4,112 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-ansible==2.9.25
+ansible==5.5.0
     # via -r requirements.in
-attrs==21.2.0
+ansible-core==2.12.3
+    # via
+    #   -r requirements.in
+    #   ansible
+attrs==21.4.0
     # via jsonschema
-awacs==2.0.1
+awacs==2.1.0
     # via -r requirements.in
-awscli==1.20.36
+awscli==1.22.77
     # via -r requirements.in
 bcdoc==0.16.0
     # via -r requirements.in
-boto3==1.18.36
+boto3==1.21.22
     # via -r requirements.in
-botocore==1.21.36
+botocore==1.24.22
     # via
     #   awscli
     #   boto3
     #   s3transfer
-certifi==2021.5.30
+certifi==2021.10.8
     # via requests
-cffi==1.14.6
+cffi==1.15.0
     # via cryptography
-charset-normalizer==2.0.4
+charset-normalizer==2.0.12
     # via requests
 colorama==0.4.3
     # via awscli
-cryptography==3.4.8
+cryptography==36.0.2
     # via
     #   -r requirements.in
-    #   ansible
+    #   ansible-core
 docutils==0.15.2
     # via
     #   awscli
     #   bcdoc
-idna==3.2
+idna==3.3
     # via requests
-jinja2==3.0.1
+jinja2==3.0.3
     # via
-    #   ansible
+    #   ansible-core
     #   jinja2-cli
-jinja2-cli[yaml]==0.7.0
+jinja2-cli[yaml]==0.8.1
     # via -r requirements.in
-jmespath==0.10.0
+jmespath==1.0.0
     # via
     #   boto3
     #   botocore
-jsonschema==3.2.0
+jsonschema==4.4.0
     # via -r requirements.in
-markupsafe==2.0.1
+markupsafe==2.1.1
     # via jinja2
-mitogen==0.2.9
+mitogen==0.3.2
     # via -r requirements.in
 netaddr==0.8.0
     # via -r requirements.in
-pbr==5.6.0
+packaging==21.3
+    # via ansible-core
+pbr==5.8.1
     # via -r requirements.in
 pretty==0.1
     # via -r requirements.in
-pyaml==21.8.3
+pyaml==21.10.1
     # via -r requirements.in
 pyasn1==0.4.8
     # via rsa
-pycparser==2.20
+pycparser==2.21
     # via cffi
-pyrsistent==0.18.0
+pyparsing==3.0.7
+    # via packaging
+pyrsistent==0.18.1
     # via jsonschema
 python-dateutil==2.8.2
     # via botocore
-python-slugify==5.0.2
+python-slugify==6.1.1
     # via -r requirements.in
 pyyaml==5.4.1
     # via
     #   -r requirements.in
-    #   ansible
+    #   ansible-core
     #   awscli
     #   jinja2-cli
     #   pyaml
-requests==2.26.0
+requests==2.27.1
     # via -r requirements.in
+resolvelib==0.5.4
+    # via ansible-core
 rsa==4.7.2
     # via awscli
-s3transfer==0.5.0
+s3transfer==0.5.2
     # via
     #   awscli
     #   boto3
-simplejson==3.17.5
+simplejson==3.17.6
     # via -r requirements.in
 six==1.16.0
     # via
     #   -r requirements.in
     #   bcdoc
-    #   jsonschema
     #   python-dateutil
 subprocess32==3.5.4
     # via -r requirements.in
 text-unidecode==1.3
     # via python-slugify
-urllib3==1.26.6
+urllib3==1.26.9
     # via
     #   botocore
     #   requests
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
