--- a/containers/rsyslog/Dockerfile
+++ b/containers/rsyslog/Dockerfile
@@ -13,6 +13,7 @@ RUN	apt-get update && \
     add-apt-repository ppa:adiscon/v8-stable -y && \
     sudo add-apt-repository ppa:neovim-ppa/stable -y && \
     apt-get update && \
+    apt-get install sudo curl wget -y && \
     apt-get upgrade -yqq && \
     apt-get install -y gzip tar rsyslog \
     rsyslog-czmq \
