WIP: fluentd-centralized

--- a/containers/fluentd-elasticsearch/Makefile
+++ b/containers/fluentd-elasticsearch/Makefile
@@ -133,3 +133,9 @@ dc-pull:
 
 cleanup:
 	bash scripts/cleanup-docker
+
+bundle-install:
+	gem install bundler
+
+biv: bundle-install
+	bundle install --path .vendor
