WIP: fluentd-centralized

--- a/containers/fluentd-elasticsearch/Dockerfile
+++ b/containers/fluentd-elasticsearch/Dockerfile
@@ -19,10 +19,13 @@
 # Note that fluentd is run with root permssion to allow access to
 # log files with root only access under /var/log/containers/*
 
-FROM debian:stretch-slim
+FROM debian:bullseye-slim
 # FROM k8s.gcr.io/fluentd-elasticsearch:v2.2.0
 
-ENV RBSPY_RELEASE="https://github.com/rbspy/rbspy/releases/download/v0.3.3/rbspy-v0.3.3-x86_64-unknown-linux-musl.tar.gz" \
+# https://github.com/rbspy/rbspy/releases/download/v0.11.1/rbspy-x86_64-unknown-linux-gnu.tar.gz
+# https://github.com/rbspy/rbspy/releases/download/v0.11.1/rbspy-x86_64-musl.tar.gz
+
+ENV RBSPY_RELEASE="https://github.com/rbspy/rbspy/releases/download/v0.11.1/rbspy-x86_64-musl.tar.gz" \
     RUBY_GC_HEAP_OLDOBJECT_LIMIT_FACTOR="1.2" \
     GOSU_VERSION=1.10 \
     JEMALLOC_VERSION=4.5.0
