WIP: fluentd-centralized, lock elasticsearch version

--- a/containers/fluentd-elasticsearch/Gemfile
+++ b/containers/fluentd-elasticsearch/Gemfile
@@ -3,6 +3,8 @@ source 'https://rubygems.org'
 gem 'fluent-plugin-detect-exceptions'
 gem 'activesupport', '~>5.2.1'
 gem 'fluent-plugin-elasticsearch'
+gem 'elasticsearch-xpackh'
+gem 'elasticsearch', '7.16.3'
 gem 'ffi'
 gem 'fluent-plugin-prometheus'
 gem 'fluent-plugin-rewrite-tag-filter'
