--- a/containers/fluentd-elasticsearch/Gemfile
+++ b/containers/fluentd-elasticsearch/Gemfile
@@ -3,7 +3,7 @@ source 'https://rubygems.org'
 gem 'fluent-plugin-detect-exceptions'
 gem 'activesupport', '~>5.2.1'
 gem 'fluent-plugin-elasticsearch'
-gem 'elasticsearch-xpackh'
+gem 'elasticsearch-xpack'
 gem 'elasticsearch', '7.16.3'
 gem 'ffi'
 gem 'fluent-plugin-prometheus'
