--- a/containers/rsyslog/Makefile
+++ b/containers/rsyslog/Makefile
@@ -15,13 +15,13 @@
 # image: gcr.io/google-containers/rsyslog:v2.0.1
 
 
-username := bossjones
+username := index.docker.io/bossjones
 container_name := rsyslog
 
 GIT_BRANCH  = $(shell git rev-parse --abbrev-ref HEAD)
 GIT_SHA     = $(shell git rev-parse HEAD)
 BUILD_DATE  = $(shell date -u +"%Y-%m-%dT%H:%M:%SZ")
-VERSION     ?= $(shell grep "alpine:3.7" Dockerfile | head -1 | cut -d":" -f2)
+VERSION     ?= $(shell grep "alpine:3.15.1" Dockerfile | head -1 | cut -d":" -f2)
 
 TAG ?= $(VERSION)
 ifeq ($(TAG),@branch)
@@ -30,12 +30,12 @@ ifeq ($(TAG),@branch)
 endif
 
 bash:
-	docker run \
+	DOCKER_BUILDKIT=1 docker run \
 	-it \
 	--rm \
 	--name rsyslog.bash \
 	-w /home/appliance \
-	-h $(shell hostname) \
+	-h docker-$(shell hostname) \
 	-v /etc/localtime:/etc/localtime:ro \
 	-p "5140:5140" \
 	-p "5140:5140/udp" \
@@ -44,11 +44,11 @@ bash:
 	-e "_IMUDP_PORT=5140" \
 	-e "_IMRELP_PORT=1601" \
 	--entrypoint "/bin/bash" \
-	$(username)/$(container_name):latest \
+	$(username)/$(container_name):$(TAG) \
 	-l
 
 run:
-	docker run \
+	DOCKER_BUILDKIT=1 docker run \
 	-it \
 	--rm \
 	--name rsyslog.service \
@@ -61,17 +61,19 @@ run:
 	-e "_IMUDP_PORT=5140" \
 	-e "_IMRELP_PORT=1601" \
 	-h $(shell hostname) \
-	$(username)/$(container_name):latest
+	$(username)/$(container_name):$(TAG)
 
 build:
-	docker build \
+	DOCKER_BUILDKIT=1 docker buildx build \
 	--build-arg VCS_REF=$(GIT_SHA) \
 	--build-arg BUILD_DATE=$(VERSION) \
 	--build-arg BUILD_DATE=$(shell date -u +'%Y-%m-%dT%H:%M:%SZ') \
 	--tag $(username)/$(container_name):$(GIT_SHA) .
+	DOCKER_BUILDKIT=1 docker tag $(username)/$(container_name):$(GIT_SHA) $(username)/$(container_name):latest
+	DOCKER_BUILDKIT=1 docker tag $(username)/$(container_name):$(GIT_SHA) $(username)/$(container_name):$(TAG)
 
 build-force:
-	docker build --rm \
+	DOCKER_BUILDKIT=1 docker buildx build --rm \
 	--force-rm \
 	--pull \
 	--no-cache \
@@ -80,27 +82,27 @@ build-force:
 build-tag: build tag
 
 tag:
-	docker tag $(username)/$(container_name):$(GIT_SHA) $(username)/$(container_name):latest
-	docker tag $(username)/$(container_name):$(GIT_SHA) $(username)/$(container_name):$(TAG)
+	DOCKER_BUILDKIT=1 docker tag $(username)/$(container_name):$(GIT_SHA) $(username)/$(container_name):latest
+	DOCKER_BUILDKIT=1 docker tag $(username)/$(container_name):$(GIT_SHA) $(username)/$(container_name):$(TAG)
 
 build-push: build tag
-	docker push $(username)/$(container_name):latest
-	docker push $(username)/$(container_name):$(GIT_SHA)
-	docker push $(username)/$(container_name):$(TAG)
+	DOCKER_BUILDKIT=1 docker push $(username)/$(container_name):latest
+	DOCKER_BUILDKIT=1 docker push $(username)/$(container_name):$(GIT_SHA)
+	DOCKER_BUILDKIT=1 docker push $(username)/$(container_name):$(TAG)
 
 build-push-version: build tag
-	docker push $(username)/$(container_name):$(TAG)
+	DOCKER_BUILDKIT=1 docker push $(username)/$(container_name):$(TAG)
 
 build-push-version-force: build-force tag
-	docker push $(username)/$(container_name):$(TAG)
+	DOCKER_BUILDKIT=1 docker push $(username)/$(container_name):$(TAG)
 
 build-push-version-dump: build tag
 	echo docker push $(username)/$(container_name):$(TAG)
 
 push:
-	docker push $(username)/$(container_name):latest
-	docker push $(username)/$(container_name):$(GIT_SHA)
-	docker push $(username)/$(container_name):$(TAG)
+	DOCKER_BUILDKIT=1 docker push $(username)/$(container_name):latest
+	DOCKER_BUILDKIT=1 docker push $(username)/$(container_name):$(GIT_SHA)
+	DOCKER_BUILDKIT=1 docker push $(username)/$(container_name):$(TAG)
 
 push-force: build-force push
 
