WIP: fluentd-loki

--- a/containers/fluentd-elasticsearch/Gemfile
+++ b/containers/fluentd-elasticsearch/Gemfile
@@ -3,6 +3,7 @@ source 'https://rubygems.org'
 gem 'fluent-plugin-detect-exceptions'
 gem 'activesupport', '~>5.2.1'
 gem 'fluent-plugin-elasticsearch'
+gem 'fluent-plugin-grafana-loki'
 gem 'elasticsearch-xpack'
 gem 'elasticsearch', '7.16.3'
 gem 'ffi'
